--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
